# intflpl

./: CMakeLists.txt
src/: CMakeLists.txt  flpl_def.h  intLU.cpp  intcstrvect.cpp  intcstrvect.h  intpoly.cpp  intpoly.h  intsimplex.cpp  intsimplex.h  permut.cpp  permut.h
src/core/: CMakeLists.txt  flpl.h  intLU.cpp  intLU.h  intcstrvect.cpp  intcstrvect.h  intflpl.h  intpoly.cpp  intpoly.h  intpoly_inline.hpp  intsimplex.cpp  intsimplex.h  permut.cpp  permut.h
tests/: CMakeLists.txt  tests_flpl_LU.cpp  tests_flpl_permut.cpp  tests_flpl_poly.cpp  tests_flpl_simplex.cpp
